<resources>
    <string name="app_name">RoCheck</string>
    <string name="admob_app_id">ca-app-pub-7741681524529243~9907625789</string>
    <string name="admob_app_id_for_test">ca-app-pub-3940256099942544~3347511713</string>
    <string name="banner_ad_unit_id_for_test">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_ad_unit_id">ca-app-pub-7741681524529243/6568084299</string>
    <string name="banner_ad_unit_id_checklist">ca-app-pub-7741681524529243/8072737652</string>
    <string name="banner_ad_unit_id_expedition">ca-app-pub-7741681524529243/1507329304</string>
    <string name="opening_ad_unit_id">ca-app-pub-7741681524529243/1515961418</string>
    <string name="opening_ad_unit_id_test">ca-app-pub-3940256099942544/3419835294</string>
    <string name="front_ad_unit_id">ca-app-pub-7741681524529243/6747391158</string>
    <string name="front_ad_unit_id_test">ca-app-pub-3940256099942544/1033173712</string>

    <string name="character_title">캐릭터 선택</string>
    <string name="character_no_list">+ 버튼을 눌러\n캐릭터를 추가해주세요.</string>
    <string name="character_add_nickname">닉네임</string>
    <string name="character_add_level">아이템 레벨</string>
    <string name="character_add_class">클래스</string>
    <string name="character_add_create">추가</string>
    <string name="character_add_cancel">취소</string>
    <string name="character_add_change">변경</string>
    <string name="character_add_main">본캐</string>
    <string name="character_add_sub">부캐</string>
    <string name="character_add_barrack">배럭</string>
    <string name="character_add_title">캐릭터 추가</string>
    <string name="character_reset_btn_title">오전 6시가 지나도 초기화되지 않았나요?</string>
    <string name="character_reset_title">숙제 초기화</string>
    <string name="character_reset_msg">디바이스가 꺼진 상태에서는 자동 초기화가 진행되지 않습니다.\n오전 6시가 지났는데 초기화 되지 않았다면 수동으로 초기화 해주세요.</string>
    <string name="character_reset">초기화</string>
    <string name="character_reset_really">초기화 하시겠습니까?</string>
    <string name="character_reset_really_ok">확인</string>
    <string name="character_setting">설정</string>
    <string name="character_setting_title">알람 시간 변경</string>

    <string name="character_dialog_change_level">아이템 레벨 변경</string>
    <string name="character_dialog_delete">캐릭터 삭제</string>
    <string name="character_edit_type">캐릭터 타입 변경</string>
    <string name="character_dialog_delete_msg">삭제한 캐릭터는 다시 복구할 수 없습니다.\n삭제하시겠습니까?</string>

    <string name="check_list_title">체크리스트</string>
    <string name="check_list_tab_daily">일일</string>
    <string name="check_list_tab_weekly">주간</string>
    <string name="check_list_tab_raid">군단장 레이드</string>
    <string name="check_list_no_list">진행할 수 있는\n컨텐츠가 없습니다.</string>
    <string name="check_list_edit_rest_dialog_efona">에포나 휴식 보너스</string>
    <string name="check_list_edit_rest_dialog_guardian">가디언 휴식 보너스</string>
    <string name="check_list_edit_rest_dialog_chaos">카던 휴식 보너스</string>
    <string name="check_list_edit_rest_dialog_msg">휴식 보너스 수정</string>
    <string name="check_list_edit_rest_dialog_modify">수정</string>

    <string name="expedition_title">원정대 체크리스트</string>
</resources>
