<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/text_color"
        android:padding="@dimen/default_layout_padding">

        <TextView
            android:id="@+id/tv_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/character_edit_type"
            android:textColor="@color/primary_color"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_msg">

            <RadioButton
                android:id="@+id/radio_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:text="@string/character_add_main"
                android:checked="true"
                android:textColor="@color/primary_color"/>

            <RadioButton
                android:id="@+id/radio_sub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:text="@string/character_add_sub"
                android:textColor="@color/primary_color"/>

            <RadioButton
                android:id="@+id/radio_barrack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="20dp"
                android:gravity="center"
                android:text="@string/character_add_barrack"
                android:textColor="@color/primary_color"/>

        </RadioGroup>

        <Button
            android:id="@+id/btn_ok"
            style="@style/buttonCommon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp"
            android:text="@string/character_add_change"
            app:layout_constraintTop_toBottomOf="@id/radio_group"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_cancel" />

        <Button
            android:id="@+id/btn_cancel"
            style="@style/buttonCommon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp"
            android:text="@string/character_add_cancel"
            app:layout_constraintTop_toBottomOf="@id/radio_group"
            app:layout_constraintStart_toEndOf="@id/btn_ok"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>