<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_cm_dialog"
        android:padding="@dimen/default_layout_padding">

        <TextView
            android:id="@+id/tv_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/character_add_title"
            android:textColor="@color/primary_color"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/container_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="30dp"
            android:hint="@string/character_add_nickname"
            app:layout_constraintTop_toBottomOf="@id/tv_msg">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/container_level"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:hint="@string/character_add_level"
            app:layout_constraintTop_toBottomOf="@id/container_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_level"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="4"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/bg_class_spinner"
            android:paddingStart="10dp"
            app:layout_constraintTop_toBottomOf="@id/container_level"
            app:layout_constraintStart_toStartOf="@id/container_level"
            app:layout_constraintEnd_toEndOf="@id/container_level"
            tools:ignore="RtlSymmetry" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinner">

            <RadioButton
                android:id="@+id/radio_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:text="@string/character_add_main"
                android:checked="true"
                android:textColor="@color/primary_color"/>

            <RadioButton
                android:id="@+id/radio_sub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:text="@string/character_add_sub"
                android:textColor="@color/primary_color"/>

            <RadioButton
                android:id="@+id/radio_barrack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="20dp"
                android:gravity="center"
                android:text="@string/character_add_barrack"
                android:textColor="@color/primary_color"/>

        </RadioGroup>
        <Button
            android:id="@+id/btn_ok"
            style="@style/buttonCommon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp"
            android:text="@string/character_add_create"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_cancel"
            app:layout_constraintTop_toBottomOf="@id/radio_group"
            app:layout_constraintBottom_toBottomOf="parent" />
        <Button
            android:id="@+id/btn_cancel"
            style="@style/buttonCommon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp"
            android:text="@string/character_add_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_ok"
            app:layout_constraintTop_toBottomOf="@id/radio_group"
            app:layout_constraintBottom_toBottomOf="parent" />




    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
