<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_cm_dialog"
        android:padding="@dimen/default_layout_padding">

        <TextView
            android:id="@+id/tv_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_list_edit_rest_dialog_msg"
            android:textColor="@color/primary_color"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/container_efona"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="40dp"
            android:hint="@string/check_list_edit_rest_dialog_efona"
            app:layout_constraintTop_toBottomOf="@id/tv_msg">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_efona"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="3"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/container_guardian"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:hint="@string/check_list_edit_rest_dialog_guardian"
            app:layout_constraintTop_toBottomOf="@id/container_efona">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_guardian"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="3"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/container_chaos"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:hint="@string/check_list_edit_rest_dialog_chaos"
            app:layout_constraintTop_toBottomOf="@id/container_guardian">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_chaos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="3"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_ok"
            style="@style/buttonCommon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp"
            android:text="@string/check_list_edit_rest_dialog_modify"
            android:enabled="false"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_cancel"
            app:layout_constraintTop_toBottomOf="@id/container_chaos"
            app:layout_constraintBottom_toBottomOf="parent" />
        <Button
            android:id="@+id/btn_cancel"
            style="@style/buttonCommon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp"
            android:text="@string/character_add_cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_ok"
            app:layout_constraintTop_toBottomOf="@id/spinner"
            app:layout_constraintBottom_toBottomOf="parent" />




    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>